reverting back to old title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ advantages of using DMA, rather than the core, in the DSP56300 family: <br>DMA s
 DMA saves power because it requires less circuitry than the core to move data.
 DMA saves pointers because core AGU pointer registers are not needed.
 DMA has no modulo block size<br>
-<a name="Images in HTML"><h2>Direct Memory Access (DMA)</h2></a>
+<a name="Images in HTML!!"><h2>Direct Memory Access (DMA)</h2></a>
 </i></b>
  
 </body></html>
