--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ throughput. An I/O device often operates at a much slower speed than the core.1 
 allows the I/O device to access the memory directly, without using the core. </b></i><br><br><hr>
 <center><i><b><u>image align right</u></b></i></center>
 new data
-<img align=right src="mer17a.jpg" width=300><br><br><b><i>DMA can lead to a significant improvement in performance because data movement is one of the
-most common operations performed in processing applications. There are several
-advantages of using DMA, rather than the core, in the DSP56300 family: <br>DMA saves core MIPS because the core can operate in parallel.
+<img align=right src="mer17a.jpg" width=300><br><br><b><i>DMA can lead to a significant improvement in performance because data movement is one of the most common operations performed in processing applications. There are several advantages of using DMA, rather than the core, in the DSP56300 family: <br>DMA saves core MIPS because the core can operate in parallel.!!
 DMA saves power because it requires less circuitry than the core to move data.
 DMA saves pointers because core AGU pointer registers are not needed.
 DMA has no modulo block size<br>
